--- a/docusaurus/src/pages/index.module.css
+++ b/docusaurus/src/pages/index.module.css
@@ -904,6 +904,8 @@
 }
 
 .featuresGrid {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 54px;
 }
 
@@ -1120,4 +1122,10 @@
 .basicsSection {
   background: #fafcff;
   padding: 50px 20px;
+}
+
+@media screen and (max-width: 900px) {
+  .featuresGrid {
+    grid-template-columns: 1fr;
+  }
 }
