--- a/docusaurus/src/pages/index.module.css
+++ b/docusaurus/src/pages/index.module.css
@@ -1049,6 +1049,29 @@
   line-height: 160%;
 }
 
+.enterpriseCard :global(.button--primary) {
+  background-color: var(--kairos-orange) !important;
+  border-color: var(--kairos-orange) !important;
+  color: #fff !important;
+}
+
+.enterpriseCard :global(a.button--primary:link),
+.enterpriseCard :global(a.button--primary:visited) {
+  color: #fff !important;
+}
+
+.enterpriseCard :global(.button--primary:hover),
+.enterpriseCard :global(.button--primary:focus),
+.enterpriseCard :global(.button--primary:active),
+[data-theme='dark'] .enterpriseCard :global(.button--primary),
+[data-theme='dark'] .enterpriseCard :global(.button--primary:hover),
+[data-theme='dark'] .enterpriseCard :global(.button--primary:focus),
+[data-theme='dark'] .enterpriseCard :global(.button--primary:active) {
+  background-color: var(--kairos-orange) !important;
+  border-color: var(--kairos-orange) !important;
+  color: #fff !important;
+}
+
 .adoptersSection {
   background: #fff;
   padding: 100px 20px;
@@ -1122,6 +1145,28 @@
 .basicsSection {
   background: #fafcff;
   padding: 50px 20px;
+}
+
+[data-theme='dark'] .enterpriseSection {
+  background: #131a24;
+}
+
+[data-theme='dark'] .enterpriseSection h2 {
+  color: #fff;
+}
+
+[data-theme='dark'] .enterpriseDescription {
+  color: #d5dbe6;
+}
+
+[data-theme='dark'] .enterpriseCard {
+  background: #fff;
+  border: 0;
+  box-shadow: 0 17px 56px -10px rgba(6, 17, 77, 0.22);
+}
+
+[data-theme='dark'] .enterpriseCard p {
+  color: #707594;
 }
 
 @media screen and (max-width: 900px) {
